removed 2nd row "checked"

--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -699,7 +699,7 @@
                         </select>
                         <input class="input-number" type="text" name="attr_animal_handling_total" value="0" title="@{animal_handling_total}" readonly />
 <!-- expand 2nd row -->
-                        <input class="expand" type="checkbox" name="attr_expand_animal_handling" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <input class="expand" type="checkbox" name="attr_expand_animal_handling" value="1" data-i18n-title="show-hide" title="show/hide" /><span></span>
 
                         <div class="animal-handling-row2 skills-row2">
                             <div class="skills-row2-header">
@@ -739,7 +739,7 @@
                         </select>
                         <input class="input-number" type="text" name="attr_crafting_total" value="0" title="@{crafting_total}" readonly />
 <!-- expand 2nd row -->
-                        <input class="expand" type="checkbox" name="attr_expand_crafting" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <input class="expand" type="checkbox" name="attr_expand_crafting" value="1" data-i18n-title="show-hide" title="show/hide" /><span></span>
                         <div class="crafting-row2 skills-row2">
                             <div class="skills-row2-header">
                                 <div class="skills-box5 column-header"></div>
@@ -777,7 +777,7 @@
                         </select>
                         <input class="input-number" type="text" name="attr_endurance_total" value="0" title="@{endurance_total}" readonly />
 <!-- expand 2nd row -->
-                        <input class="expand" type="checkbox" name="attr_expand_endurance" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <input class="expand" type="checkbox" name="attr_expand_endurance" value="1" data-i18n-title="show-hide" title="show/hide" /><span></span>
                         <div class="endurance-row2 skills-row2">
                             <div class="skills-row2-header">
                                 <div class="skills-box5 column-header"></div>
@@ -815,7 +815,7 @@
                         </select>
                         <input class="input-number" type="text" name="attr_healing_total" value="0" title="@{healing_total}" readonly />
 <!-- expand 2nd row -->
-                        <input class="expand" type="checkbox" name="attr_expand_healing" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <input class="expand" type="checkbox" name="attr_expand_healing" value="1" data-i18n-title="show-hide" title="show/hide" /><span></span>
                         <div class="healing-row2 skills-row2">
                             <div class="skills-row2-header">
                                 <div class="skills-box5 column-header"></div>
@@ -853,7 +853,7 @@
                         </select>
                         <input class="input-number" type="text" name="attr_insight_total" value="0" title="@{insight_total}" readonly />
 <!-- expand 2nd row -->
-                        <input class="expand" type="checkbox" name="attr_expand_insight" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <input class="expand" type="checkbox" name="attr_expand_insight" value="1" data-i18n-title="show-hide" title="show/hide" /><span></span>
                         <div class="insight-row2 skills-row2">
                             <div class="skills-row2-header">
                                 <div class="skills-box5 column-header"></div>
@@ -891,7 +891,7 @@
                         </select>
                         <input class="input-number" type="text" name="attr_lore_total" value="0" title="@{lore_total}" readonly />
 <!-- expand 2nd row -->
-                        <input class="expand" type="checkbox" name="attr_expand_lore" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <input class="expand" type="checkbox" name="attr_expand_lore" value="1" data-i18n-title="show-hide" title="show/hide" /><span></span>
                         <div class="lore-row2 skills-row2">
                             <div class="skills-row2-header">
                                 <div class="skills-box5 column-header"></div>
@@ -929,7 +929,7 @@
                         </select>
                         <input class="input-number" type="text" name="attr_manipulation_total" value="0" title="@{manipulation_total}" readonly />
 <!-- expand 2nd row -->
-                        <input class="expand" type="checkbox" name="attr_expand_manipulation" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <input class="expand" type="checkbox" name="attr_expand_manipulation" value="1" data-i18n-title="show-hide" title="show/hide" /><span></span>
                         <div class="manipulation-row2 skills-row2">
                             <div class="skills-row2-header">
                                 <div class="skills-box5 column-header"></div>
@@ -967,7 +967,7 @@
                         </select>
                         <input class="input-number" type="text" name="attr_marksmanship_total" value="0" title="@{marksmanship_total}" readonly />
 <!-- expand 2nd row -->
-                        <input class="expand" type="checkbox" name="attr_expand_marksmanship" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <input class="expand" type="checkbox" name="attr_expand_marksmanship" value="1" data-i18n-title="show-hide" title="show/hide" /><span></span>
                         <div class="marksmanship-row2 skills-row2">
                             <div class="skills-row2-header">
                                 <div class="skills-box5 column-header"></div>
@@ -1005,7 +1005,7 @@
                         </select>
                         <input class="input-number" type="text" name="attr_melee_total" value="0" title="@{melee_total}" readonly />
 <!-- expand 2nd row -->
-                        <input class="expand" type="checkbox" name="attr_expand_melee" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <input class="expand" type="checkbox" name="attr_expand_melee" value="1" data-i18n-title="show-hide" title="show/hide" /><span></span>
                         <div class="melee-row2 skills-row2">
                             <div class="skills-row2-header">
                                 <div class="skills-box5 column-header"></div>
@@ -1043,7 +1043,7 @@
                         </select>
                         <input class="input-number" type="text" name="attr_might_total" value="0" title="@{might_total}" readonly />
 <!-- expand 2nd row -->
-                        <input class="expand" type="checkbox" name="attr_expand_might" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <input class="expand" type="checkbox" name="attr_expand_might" value="1" data-i18n-title="show-hide" title="show/hide" /><span></span>
                         <div class="might-row2 skills-row2">
                             <div class="skills-row2-header">
                                 <div class="skills-box5 column-header"></div>
@@ -1081,7 +1081,7 @@
                         </select>
                         <input class="input-number" type="text" name="attr_move_total" value="0" title="@{move_total}" readonly />
 <!-- expand 2nd row -->
-                        <input class="expand" type="checkbox" name="attr_expand_move" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <input class="expand" type="checkbox" name="attr_expand_move" value="1" data-i18n-title="show-hide" title="show/hide" /><span></span>
                         <div class="move-row2 skills-row2">
                             <div class="skills-row2-header">
                                 <div class="skills-box5 column-header"></div>
@@ -1119,7 +1119,7 @@
                         </select>
                         <input class="input-number" type="text" name="attr_performance_total" value="0" title="@{performance_total}" readonly />
 <!-- expand 2nd row -->
-                        <input class="expand" type="checkbox" name="attr_expand_performance" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <input class="expand" type="checkbox" name="attr_expand_performance" value="1" data-i18n-title="show-hide" title="show/hide" /><span></span>
                         <div class="performance-row2 skills-row2">
                             <div class="skills-row2-header">
                                 <div class="skills-box5 column-header"></div>
@@ -1157,7 +1157,7 @@
                         </select>
                         <input class="input-number" type="text" name="attr_scouting_total" value="0" title="@{scouting_total}" readonly />
 <!-- expand 2nd row -->
-                        <input class="expand" type="checkbox" name="attr_expand_scouting" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <input class="expand" type="checkbox" name="attr_expand_scouting" value="1" data-i18n-title="show-hide" title="show/hide" /><span></span>
                         <div class="scouting-row2 skills-row2">
                             <div class="skills-row2-header">
                                 <div class="skills-box5 column-header"></div>
@@ -1195,7 +1195,7 @@
                         </select>
                         <input class="input-number" type="text" name="attr_sleight_of_hand_total" value="0" title="@{sleight_of_hand_total}" readonly />
 <!-- expand 2nd row -->
-                        <input class="expand" type="checkbox" name="attr_expand_sleight_of_hand" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <input class="expand" type="checkbox" name="attr_expand_sleight_of_hand" value="1" data-i18n-title="show-hide" title="show/hide" /><span></span>
                         <div class="sleight-of-hand-row2 skills-row2">
                             <div class="skills-row2-header">
                                 <div class="skills-box5 column-header"></div>
@@ -1233,7 +1233,7 @@
                         </select>
                         <input class="input-number" type="text" name="attr_stealth_total" value="0" title="@{stealth_total}" readonly />
 <!-- expand 2nd row -->
-                        <input class="expand" type="checkbox" name="attr_expand_stealth" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <input class="expand" type="checkbox" name="attr_expand_stealth" value="1" data-i18n-title="show-hide" title="show/hide" /><span></span>
                         <div class="stealth-row2 skills-row2">
                             <div class="skills-row2-header">
                                 <div class="skills-box5 column-header"></div>
@@ -1271,7 +1271,7 @@
                         </select>
                         <input class="input-number" type="text" name="attr_survival_total" value="0" title="@{survival_total}" readonly />
 <!-- expand 2nd row -->
-                        <input class="expand" type="checkbox" name="attr_expand_survival" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <input class="expand" type="checkbox" name="attr_expand_survival" value="1" data-i18n-title="show-hide" title="show/hide" /><span></span>
                         <div class="survival-row2 skills-row2">
                             <div class="skills-row2-header">
                                 <div class="skills-box5 column-header"></div>
