add second static skill & misspelling

--- a/ButterflyAspect/ButterflyAspect.html
+++ b/ButterflyAspect/ButterflyAspect.html
@@ -138,12 +138,23 @@
 
 			<div class="repcontainer" data-groupname="repeating_basicskills">
 				<div class="repitem" data-reprowid="-LqmJZp6DZSuTu37ytv5">
-					<div><input class="sheet-textcenter" type="text" name="attr_statikskillname" value="Ressourcen" /></div>
+					<div><input class="sheet-textcenter" type="text" name="attr_statikskillname1" value="Ansehen" /></div>
 					<div>-</div>
-					<div><input type="number" name="attr_statikskill" value="0"></div>
-					<div><input type="number" name="attr_statikskill_mod" value="0"></div>
+					<div><input type="number" name="attr_statikskill1" value="0"></div>
+					<div><input type="number" name="attr_statikskill1_mod" value="0"></div>
 					<div>-</div>
-					<div><button type="roll" name="roll_statikskill" value="@{abilityroll} würfelt @{statikskillname} mit dem Ergebniss [[(@{statikskill})d10!! + @{statikskill_mod} + ?{Modifier?|0}]]" class="btn ui-draggable"></button></div>
+					<div><button type="roll" name="roll_statikskill1" value="@{abilityroll} würfelt @{statikskillname1} mit dem Ergebnis [[(@{statikskill1})d10!! + @{statikskill1_mod} + ?{Modifier?|0}]]" class="btn ui-draggable"></button></div>
+				</div>
+			</div>
+
+			<div class="repcontainer" data-groupname="repeating_basicskills">
+				<div class="repitem" data-reprowid="-LqmJZp6DZSuTu37ytv5">
+					<div><input class="sheet-textcenter" type="text" name="attr_statikskillname2" value="Vermögen" /></div>
+					<div>-</div>
+					<div><input type="number" name="attr_statikskill2" value="0"></div>
+					<div><input type="number" name="attr_statikskill2_mod" value="0"></div>
+					<div>-</div>
+					<div><button type="roll" name="roll_statikskill2" value="@{abilityroll2} würfelt @{statikskillname2} mit dem Ergebnis [[(@{statikskill2})d10!! + @{statikskill2_mod} + ?{Modifier?|0}]]" class="btn ui-draggable"></button></div>
 				</div>
 			</div>
 
