--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -1732,7 +1732,7 @@
 			<div class="basicModule module">
 				<div class="moduleOptionalCheckbox"><input type="checkbox" name="attr_compartments" class="checkbox" value="active" /><span></span></div>
 				<div class="moduleOptionalTitle"> Compartments</div>
-				<div class="moduleDetail">Concealed Hold [10 tonne]</div>
+				<div class="moduleDetail">Concealed Hold [10t]</div>
 				<div class="moduleListTitle">Fittings</div>
 				<div class="moduleListCost1">2</div>
 				<div class="moduleListFitting1">Feed Passenger/Day</div>
@@ -1789,13 +1789,12 @@
 		<div class="launchBayArmourPrinterTitle">Armour Printer</div>
 		<div class="launchBayArmourCost">2</div>
 		<div class="launchBayArmourFitting">Armour</div>
-		<div class="launchBayArmourPips">
-			<div class="armour"><input type="checkbox" name="attr_tugArmour3Slot" class="checkbox" value="active" /><span></span>&ensp;<input name="attr_tugArmour3Condition" type="checkbox" value="1"><span class="armor-x"></span></div>
-
+		<div class="launchBayArmourPips armour">
+			<input type="checkbox" name="attr_tugArmour3Slot" class="" value="active" /><span></span>&ensp;<input name="attr_tugArmour3Condition" type="checkbox" value="1"><span class="armor-damage"></span>
 			&emsp;
-			<input type="checkbox" name="attr_tugArmour2Slot" class="checkbox" value="active" /><span></span>&ensp;<input name="attr_tugArmour2Condition" type="checkbox" value="1"><span class="armor-x"></span>
+			<input type="checkbox" name="attr_tugArmour2Slot" class="" value="active" /><span></span>&ensp;<input name="attr_tugArmour2Condition" type="checkbox" value="1"><span class="armor-damage"></span>
 			&emsp;
-			<input type="checkbox" name="attr_portArmour1Slot" class="checkbox" value="active" /><span></span>&ensp;<input name="attr_tugArmour1Condition" type="checkbox" value="1"><span class="armor-x"></span>
+			<input type="checkbox" name="attr_portArmour1Slot" class="" value="active" /><span></span>&ensp;<input name="attr_tugArmour1Condition" type="checkbox" value="1"><span class="armor-damage"></span>
 		</div>
 		<div class="launchBayCapacityPips">
 			<input type="radio" class="Reactor" name="attr_tugReactor" value="1" /><span></span>
