str monster skills

--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -720,9 +720,10 @@
 <!-- 2nd row -->
                     </span>
                     <span class="skills-row" data-i18n-list-item="crafting">
-                        <button type="action" name="act_dice_pool_crafting" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="crafting">Crafting</span>&nbsp;(<span class="small-caps" data-i18n="strength-abbr">Str</span>&nbsp;<span name="attr_strength_total"></span>)</button>
-                        <input class="input-number" type="number" name="attr_crafting" value="0" min="0" title="@{crafting}" />
-                        <select class="input" name="attr_crafting_skill_misc" title="@{crafting_skill_misc}">
+                        <button type="action" name="act_dice_pool_crafting" class="toggle-monster-only" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="crafting">Crafting</span>&nbsp;(<span class="small-caps" data-i18n="strength-abbr">Str</span>&nbsp;<span name="attr_strength_total"></span>)</button>
+                        <button type="action" name="act_dice_pool_crafting_monster" class="monster" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="crafting">Crafting</span>&nbsp;(<span data-i18n="monster">Monster</span>)</button>
+                        <input class="input-number toggle-monster-only" type="number" name="attr_crafting" value="0" min="0" title="@{crafting}" />
+                        <select class="input toggle-monster-only" name="attr_crafting_skill_misc" title="@{crafting_skill_misc}">
                             <option value="6">+6</option>
                             <option value="5">+5</option>
                             <option value="4">+4</option>
@@ -737,10 +738,25 @@
                             <option value="-5">-5</option>
                             <option value="-6">-6</option>
                         </select>
-                        <input class="input-number" type="text" name="attr_crafting_total" value="0" title="@{crafting_total}" readonly />
+                        <select class="input monster" name="attr_crafting_monster" title="@{crafting_monster}" style="width: 3em;margin: 0;">
+                            <option value="0" selected>0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                            <option value="11">11</option>
+                            <option value="12">12</option>
+                        </select>
+                        <input class="input-number toggle-monster-only" type="text" name="attr_crafting_total" value="0" title="@{crafting_total}" readonly />
 <!-- expand 2nd row -->
-                        <input class="expand" type="checkbox" name="attr_expand_crafting" value="1" data-i18n-title="show-hide" title="show/hide" /><span></span>
-                        <div class="crafting-row2 skills-row2">
+                        <input class="expand toggle-monster-only" type="checkbox" name="attr_expand_crafting" value="1" data-i18n-title="show-hide" title="show/hide" /><span class="toggle-monster-only"></span>
+                        <div class="crafting-row2 skills-row2 toggle-monster-only">
                             <div class="skills-row2-header">
                                 <div class="skills-box5 column-header"></div>
                                 <div class="skills-box6 column-header"><span>D8</span></div>
@@ -758,9 +774,10 @@
                         </div>
                     </span>
                     <span class="skills-row" data-i18n-list-item="endurance">
-                        <button type="action" name="act_dice_pool_endurance" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="endurance">Endurance</span>&nbsp;(<span class="small-caps" data-i18n="strength-abbr">Str</span>&nbsp;<span name="attr_strength_total"></span>)</button>
-                        <input class="input-number" type="number" name="attr_endurance" value="0" min="0" title="@{endurance}" />
-                        <select class="input" name="attr_endurance_skill_misc" title="@{endurance_skill_misc}">
+                        <button type="action" name="act_dice_pool_endurance" class="toggle-monster-only" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="endurance">Endurance</span>&nbsp;(<span class="small-caps" data-i18n="strength-abbr">Str</span>&nbsp;<span name="attr_strength_total"></span>)</button>
+                        <button type="action" name="act_dice_pool_endurance_monster" class="monster" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="endurance">Endurance</span>&nbsp;(<span data-i18n="monster">Monster</span>)</button>
+                        <input class="input-number toggle-monster-only" type="number" name="attr_endurance" value="0" min="0" title="@{endurance}" />
+                        <select class="input toggle-monster-only" name="attr_endurance_skill_misc" title="@{endurance_skill_misc}">
                             <option value="6">+6</option>
                             <option value="5">+5</option>
                             <option value="4">+4</option>
@@ -775,10 +792,25 @@
                             <option value="-5">-5</option>
                             <option value="-6">-6</option>
                         </select>
-                        <input class="input-number" type="text" name="attr_endurance_total" value="0" title="@{endurance_total}" readonly />
+                        <select class="input monster" name="attr_endurance_monster" title="@{endurance_monster}" style="width: 3em;margin: 0;">
+                            <option value="0" selected>0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                            <option value="11">11</option>
+                            <option value="12">12</option>
+                        </select>
+                        <input class="input-number toggle-monster-only" type="text" name="attr_endurance_total" value="0" title="@{endurance_total}" readonly />
 <!-- expand 2nd row -->
-                        <input class="expand" type="checkbox" name="attr_expand_endurance" value="1" data-i18n-title="show-hide" title="show/hide" /><span></span>
-                        <div class="endurance-row2 skills-row2">
+                        <input class="expand toggle-monster-only" type="checkbox" name="attr_expand_endurance" value="1" data-i18n-title="show-hide" title="show/hide" /><span class="toggle-monster-only"></span>
+                        <div class="endurance-row2 skills-row2 toggle-monster-only">
                             <div class="skills-row2-header">
                                 <div class="skills-box5 column-header"></div>
                                 <div class="skills-box6 column-header"><span>D8</span></div>
@@ -986,9 +1018,10 @@
                         </div>
                     </span>
                     <span class="skills-row" data-i18n-list-item="melee">
-                        <button type="action" name="act_dice_pool_melee" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="melee">Melee</span>&nbsp;(<span class="small-caps" data-i18n="strength-abbr">Str</span>&nbsp;<span name="attr_strength_total"></span>)</button>
-                        <input class="input-number" type="number" name="attr_melee" value="0" min="0" title="@{melee}" />
-                        <select class="input" name="attr_melee_skill_misc" title="@{melee_skill_misc}">
+                        <button type="action" name="act_dice_pool_melee" class="toggle-monster-only" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="melee">Melee</span>&nbsp;(<span class="small-caps" data-i18n="strength-abbr">Str</span>&nbsp;<span name="attr_strength_total"></span>)</button>
+                        <button type="action" name="act_dice_pool_melee_monster" class="monster" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="melee">Melee</span>&nbsp;(<span data-i18n="monster">Monster</span>)</button>
+                        <input class="input-number toggle-monster-only" type="number" name="attr_melee" value="0" min="0" title="@{melee}" />
+                        <select class="input toggle-monster-only" name="attr_melee_skill_misc" title="@{melee_skill_misc}">
                             <option value="6">+6</option>
                             <option value="5">+5</option>
                             <option value="4">+4</option>
@@ -1003,10 +1036,25 @@
                             <option value="-5">-5</option>
                             <option value="-6">-6</option>
                         </select>
-                        <input class="input-number" type="text" name="attr_melee_total" value="0" title="@{melee_total}" readonly />
+                        <select class="input monster" name="attr_melee_monster" title="@{melee_monster}" style="width: 3em;margin: 0;">
+                            <option value="0" selected>0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                            <option value="11">11</option>
+                            <option value="12">12</option>
+                        </select>
+                        <input class="input-number toggle-monster-only" type="text" name="attr_melee_total" value="0" title="@{melee_total}" readonly />
 <!-- expand 2nd row -->
-                        <input class="expand" type="checkbox" name="attr_expand_melee" value="1" data-i18n-title="show-hide" title="show/hide" /><span></span>
-                        <div class="melee-row2 skills-row2">
+                        <input class="expand toggle-monster-only" type="checkbox" name="attr_expand_melee" value="1" data-i18n-title="show-hide" title="show/hide" /><span class="toggle-monster-only"></span>
+                        <div class="melee-row2 skills-row2 toggle-monster-only">
                             <div class="skills-row2-header">
                                 <div class="skills-box5 column-header"></div>
                                 <div class="skills-box6 column-header"><span>D8</span></div>
@@ -1024,9 +1072,10 @@
                         </div>
                     </span>
                     <span class="skills-row" data-i18n-list-item="might">
-                        <button type="action" name="act_dice_pool_might" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="might">Might</span>&nbsp;(<span class="small-caps" data-i18n="strength-abbr">Str</span>&nbsp;<span name="attr_strength_total"></span>)</button>
-                        <input class="input-number" type="number" name="attr_might" value="0" min="0" title="@{might}" />
-                        <select class="input" name="attr_might_skill_misc" title="@{might_skill_misc}">
+                        <button type="action" name="act_dice_pool_might" class="toggle-monster-only" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="might">Might</span>&nbsp;(<span class="small-caps" data-i18n="strength-abbr">Str</span>&nbsp;<span name="attr_strength_total"></span>)</button>
+                        <button type="action" name="act_dice_pool_might_monster" class="monster" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="might">Might</span>&nbsp;(<span data-i18n="monster">Monster</span>)</button>
+                        <input class="input-number toggle-monster-only" type="number" name="attr_might" value="0" min="0" title="@{might}" />
+                        <select class="input toggle-monster-only" name="attr_might_skill_misc" title="@{might_skill_misc}">
                             <option value="6">+6</option>
                             <option value="5">+5</option>
                             <option value="4">+4</option>
@@ -1041,10 +1090,25 @@
                             <option value="-5">-5</option>
                             <option value="-6">-6</option>
                         </select>
-                        <input class="input-number" type="text" name="attr_might_total" value="0" title="@{might_total}" readonly />
+                        <select class="input monster" name="attr_might_monster" title="@{might_monster}" style="width: 3em;margin: 0;">
+                            <option value="0" selected>0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                            <option value="11">11</option>
+                            <option value="12">12</option>
+                        </select>
+                        <input class="input-number toggle-monster-only" type="text" name="attr_might_total" value="0" title="@{might_total}" readonly />
 <!-- expand 2nd row -->
-                        <input class="expand" type="checkbox" name="attr_expand_might" value="1" data-i18n-title="show-hide" title="show/hide" /><span></span>
-                        <div class="might-row2 skills-row2">
+                        <input class="expand toggle-monster-only" type="checkbox" name="attr_expand_might" value="1" data-i18n-title="show-hide" title="show/hide" /><span class="toggle-monster-only"></span>
+                        <div class="might-row2 skills-row2 toggle-monster-only">
                             <div class="skills-row2-header">
                                 <div class="skills-box5 column-header"></div>
                                 <div class="skills-box6 column-header"><span>D8</span></div>
